[gd_scene load_steps=10 format=3 uid="uid://dt0kc3i8lqp8c"]

[ext_resource type="Script" uid="uid://drmwd748uqowm" path="res://gui/player_hud/player_hud.gd" id="1_6gnlv"]
[ext_resource type="Texture2D" uid="uid://cxmmm278po5ge" path="res://assets/ui/gui-health.png" id="1_ku0bp"]
[ext_resource type="PackedScene" uid="uid://j2q6slf6jee1" path="res://gui/player_hud/heart_gui.tscn" id="2_6gnlv"]
[ext_resource type="FontFile" uid="uid://bjnoh35ax06ho" path="res://assets/fonts/Abaddon Bold.ttf" id="4_aucyw"]

[sub_resource type="FontVariation" id="FontVariation_j4pgr"]
base_font = ExtResource("4_aucyw")
spacing_glyph = 3

[sub_resource type="Animation" id="Animation_aucyw"]
resource_name = "show_game_over"
length = 4.0
step = 0.1
markers = [{
"color": Color(1, 1, 1, 1),
"name": &"1",
"time": 0.1
}, {
"color": Color(1, 1, 1, 1),
"name": &"2",
"time": 3.0
}, {
"color": Color(1, 1, 1, 1),
"name": &"0",
"time": 1.0
}]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOut:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(150.5, 100), Vector2(150.5, 75)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(177.5, 125), Vector2(177.5, 145)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Label:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_j4pgr"]
length = 0.1
step = 0.1
markers = [{
"color": Color(1, 1, 1, 1),
"name": &"1",
"time": 0.1
}]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOut:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(150.5, 75)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(177.5, 145)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Label:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xvhp2"]
resource_name = "fade_out"
step = 0.1
markers = [{
"color": Color(1, 1, 1, 1),
"name": &"1",
"time": 0.1
}, {
"color": Color(1, 1, 1, 1),
"name": &"2",
"time": 3.0
}, {
"color": Color(1, 1, 1, 1),
"name": &"0",
"time": 1.0
}]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOut:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(150.5, 75)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(177.5, 145)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Label:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j4pgr"]
_data = {
&"RESET": SubResource("Animation_j4pgr"),
&"fade_out": SubResource("Animation_xvhp2"),
&"show_game_over": SubResource("Animation_aucyw")
}

[node name="PlayerHUD" type="CanvasLayer"]
layer = 2
script = ExtResource("1_6gnlv")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(415, 9)
texture = ExtResource("1_ku0bp")
region_enabled = true
region_rect = Rect2(30, 0, 33, 8)

[node name="HFlowContainer" type="HFlowContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -130.0
offset_top = 20.0
offset_bottom = 42.0
grow_horizontal = 0
alignment = 1

[node name="Heart" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="Heart2" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="Heart3" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="Heart4" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="Heart5" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="Heart6" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="Heart7" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="Heart8" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="Heart9" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="Heart10" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="Heart11" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="Heart12" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="Heart13" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="Heart14" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="Heart15" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="Heart16" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="Heart17" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="Heart18" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="Heart19" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="Heart20" parent="Control/HFlowContainer" instance=ExtResource("2_6gnlv")]
layout_mode = 2

[node name="GameOver" type="Control" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.78431374)

[node name="Label" type="Label" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.5
offset_top = -60.0
offset_right = 89.5
offset_bottom = -23.99997
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("FontVariation_j4pgr")
theme_override_font_sizes/font_size = 32
text = "GAME OVER"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = 10.0
offset_right = 62.5
offset_bottom = 68.000015
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="ContinueButton" type="Button" parent="Control/GameOver/VBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "continue game"

[node name="TitleButton" type="Button" parent="Control/GameOver/VBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "back to title"

[node name="FadeOut" type="ColorRect" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/GameOver"]
libraries = {
&"": SubResource("AnimationLibrary_j4pgr")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
max_polyphony = 3
bus = &"SFX"
